--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "url": "https://github.com/nutibara/nutibara-product-card",
+    "type": "git"
+  },
+  "homepage": "https://dominicanairporttransfers.com",
   "engines": {
     "node": ">=10"
   },
@@ -14,6 +19,7 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
+    "test:watch": "tsdx test --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
@@ -47,20 +53,42 @@
     }
   ],
   "devDependencies": {
+    "@types/react-test-renderer": "^18.0.0",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-image": "2.1.1",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "add": "^2.0.6",
+    "babel-jest": "^29.1.2",
     "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.1.2",
     "postcss": "^8.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^8.1.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.4",
     "yarn": "^1.22.19"
+  },
+  "keywords": [
+    "product",
+    "card",
+    "max",
+    "doleo"
+  ],
+  "dependencies": {
+   
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
